# authors-haven

./: .dockerignore  .gitignore  Makefile  README.md  conftest.py  local.yml  production.yml  proxy.yml  pyproject.toml
.envs/.local/: .django  .postgresql
docker/: digital_ocean_server_deploy.sh
docker/local/django/: Dockerfile  entrypoint.sh  start.sh
docker/local/nginx/: default.conf
docker/local/postgresql/: Dockerfile
docker/local/postgresql/maintenance/: backups.sh  restore.sh
docker/production/django/: Dockerfile  entrypoint.sh  start.sh
docker/production/postgresql/: Dockerfile
docker/production/postgresql/maintenance/: backup.sh
requirements/: local.txt  production.txt
src/: manage.py
src/config/: celery.py  urls.py  wsgi.py
src/config/settings/: base.py  local.py  production.py
src/v1/articles/: admin.py  apps.py  filters.py  models.py  permissions.py  read_time_engine.py  renderers.py  serializers.py  urls.py  views.py
src/v1/articles/migrations/: 0001_initial.py  0002_clap_article_claps.py
src/v1/bookmarks/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/v1/bookmarks/migrations/: 0001_initial.py
src/v1/common/: apps.py
src/v1/profiles/: admin.py  apps.py  exceptions.py  models.py  renderers.py  serializers.py  signals.py  urls.py  views.py
src/v1/profiles/migrations/: 0001_initial.py
src/v1/ratings/: admin.py  apps.py  exceptions.py  models.py  serializers.py  urls.py  views.py
src/v1/ratings/migrations/: 0001_initial.py
src/v1/responses/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/v1/responses/migrations/: 0001_initial.py
src/v1/search/: apps.py  documents.py  serializers.py  signals.py  urls.py  views.py
src/v1/users/: admin.py  apps.py  forms.py  managers.py  models.py  serializers.py  views.py
src/v1/users/migrations/: 0001_initial.py
src/v1/users/tests/: factories.py  test_forms.py  (+3 more)
(+8 files in other folders)
