[tool.poetry]
name = "authors-haven"
version = "0.1.0"
description = ""
authors = ["Fernando Toledo <fernandohtr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.2"
argon2-cffi = "^23.1.0"
django-cors-headers = "^4.4.0"
drf-spectacular = "^0.27.2"
psycopg2 = "^2.9.9"
celery = "^5.4.0"
flower = "^2.0.1"
django-celery-email = "^3.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
watchfiles = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
