[tool.poetry]
name = "authors-haven"
version = "0.1.0"
description = ""
authors = ["Fernando Toledo <fernandohtr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
argon2-cffi = "^23.1.0"
django-cors-headers = "^4.4.0"
drf-spectacular = "^0.27.2"
psycopg2 = "^2.9.9"
celery = "^5.4.0"
flower = "^2.0.1"
django-celery-email = "^3.0.0"
django-autoslug = "^1.9.9"
django-countries = "^7.6.1"
django-phonenumber-field = "^8.0.0"
phonenumbers = "^8.13.43"
pillow = "^10.4.0"
django-allauth = "^64.0.0"
djangorestframework-simplejwt = "^5.3.1"
dj-rest-auth = "^6.0.0"
django-filter = "^24.3"
requests = "^2.32.3"
djangorestframework = "^3.15.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
watchfiles = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
